--- a/myHtml.html
+++ b/myHtml.html
@@ -16,6 +16,6 @@
 </head>
 <body>
   <h1> Let's check it on the weeb</h1>
-  <p> cel mai tare site de stiri din lume </p>
+  <p> cel mai tare site de stiri din lume ok :o </p>
 </body>
 </html>
